# SimpleSelfhostAuth

./: .env  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docker.yml  docs.yml
admin-dashboard/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
admin-dashboard/src/: App.svelte  app.d.ts
admin-dashboard/src/lib/: clickOutside.ts  stores.ts
admin-dashboard/src/lib/components/: AdminDashboard.svelte  CreateAppScreen.svelte  CreateUserScreen.svelte  Login.svelte  Spinner.svelte  Switch.svelte  Tabs.svelte  UserDashboard.svelte  ViewApp.svelte  ViewUser.svelte
docs/: homer-example.md  index.md  quickstart.md
docs/reverse-proxy/: index.md  nginx.md
docs/scopes/: index.md
homer-example/: index.html
migrations/2022-05-20-141234_init/: down.sql  up.sql
quickstart/: index.html
reverse-proxy/: index.html
reverse-proxy/nginx/: index.html
scopes/: index.html
search/: search_index.json
src/: db.rs  main.rs  models.rs  schema.rs  templates.rs
src/actions/: app.rs  mod.rs  user.rs
src/routes/: admin.rs  apps.rs  auth.rs  frontend.rs  mod.rs  users.rs
templates/: base.html  error.html  login.html  tailwind.config.js  tailwind.css
