[package]
name = "simple_selfhost_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
actix-identity = "0.4"
argon2 = { version = "0.4", features = ["std"] }
rand_core = "0.6"
diesel_migrations = "1.4"
actix-cors = "0.6"
uuid = { version = "0.8", features = ["v4", "serde"] }
rust-embed = {version = "6.4", features = ["actix", "interpolate-folder-path"]}
mime_guess = "2.0"
askama = "0.10"
# redis = {version = "0.21", features = ["acl", "aio", "r2d2"], default-features = false}
#fred = {version = "5.0.0", features = ["serde-json"]}