[package]
name = "simple_selfhost_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
actix-web = "4"
#actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
actix-identity = "0.4"
argon2 = { version = "0.4", features = ["std"] }
rand_core = "0.6"
diesel_migrations = "1.4"
actix-cors = "0.6"
uuid = { version = "0.8", features = ["v4", "serde"] }
rust-embed = { version = "6.4", features = ["actix", "interpolate-folder-path", "include-exclude"] }
mime_guess = "2.0"
#actix-redis = "0.11"
#redis-async = "0.4.0"
askama = "0.10"
redis = { version = "0.21", features = ["acl", "aio", "r2d2"], default-features = false }
#fred = {version = "5.0.0", features = ["serde-json"]}
deadpool-redis = "0.10"
jsonwebtoken = "8"
lazy_static = "1.4"
time = "0.3.9"
rand = "0.8"
totp-rs = { version = "1.4", features = ["qr"] }
rand_chacha = "0.3"
hex = "0.4"
reqwest = {version = "0.11", features = ["gzip", "json", "default-tls"]}
